2011-09-01  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Yet another rewrite of the installation path rules for
	TeX files.  Remove obsolete status messages.

2011-08-31  Ethan A Merritt  <merritt@u.washington.edu>

	Bump patchlevel and date in preparation for release 4.4.4

	configure.in:  Rewrite installation path rules for TeX files.
	Bug #3401370

2011-08-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* configure.in term/emf.trm (EMF_put_text): Use iconv (if available) to
	convert UTF-8 encoding to UTF-16 and store using wide characters.
	Bug #3021779

2011-08-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c:  Honor 'set key maxrows N' in 3D plot key.

2011-08-02  Adam Strzelecki <ono@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_gui.h m4/apple.m4:
	OSX support for wxt terminal.  For OSX, switch to using single-threaded
	hybrid GUI & console event loop at wxt_waitforinput().
	Add -framework ApplicationServices to the apple-specific
	configuration flags.

2011-07-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc): Console gnuplot should leave
	wgnuplot's text window settings alone.
	Bug #3307884

2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Handle multiple overprint characters, albeit not
	the way people probably expect.
	Bug #3371782

2011-07-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Allow "using ... xticlabels()" for
	binary files as well as ascii files.  Only string-valued functions
	are valid in this case, as no string can be read from the binary 
	datafield itself.

	* term/svg.trm: Remove size limit on svg plot dimensionts.

2011-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes):  Correct positioning of bars in clustered
	histograms when some values are missing.
	Bug #3360882

2011-07-13  Ethan A Merritt  <merritt@u.washington.edu>
